# lerobot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  chop.py  dual_system_infer.py  init.py  multistage_infer.py  openpi_infer.py  pyproject.toml  run.py
.github/workflows/: benchmark_tests.yml  docker_publish_fork_training.yml  fast_tests.yml  full_tests.yml
benchmarks/: cartesian_ik_hardware_traj.py  cartesian_ik_static_hold.py  cartesian_ik_tracking.py  cartesian_ik_trajectory_viz.py  pink_ik_tracking.py
demo/: NOTES.md  build_reel.py  fetch_assets.sh  media_sources.md  walkthrough.html
docker/: Dockerfile.training
docs/plans/: async_video_encoding.md  dataset_gui_tool.md  dual_system_vla_plan_legacy.md  gui_backend_testing.md  gui_workbench.md  hvla_lerobot_integration.md  model_tab.md
examples/openarm2/: PORTING.md  README.md  TODO.md  teleoperate_quest_vr.py
examples/quest_vr_to_so107/: teleoperate.py
experiments/chunk_cadence/: README.md  analyze.py  backtest.py  backtest_teleop.py  estimator_offline_test.py  measure_leader_noise.py  online_estimator_gripper.py  results_2026-05-13.json  results_2026-05-13_smoothing.json  run_cylinder_smoothing.sh  run_smoothing_at_L0.sh  run_smoothing_sweep.sh  run_sweep.sh  run_teleop_L_sweep.sh  run_teleop_alpha_sweep.sh  run_teleop_compare.sh  run_teleop_highrate.sh  run_uniform_bias_sweep.sh  summarize.py  summarize_replicates.py  sweep_gripper_registers.py  sweep_gripper_reversal.py
impl/: README.md
impl_v2/: README.md
lerobot/scripts/: control_robot.py  feetech_debug.py
notebooks/: hil-serl.ipynb
proof/: README.md  capture.sh  gen_traj.py  harness.html
research/self_play_embodiment/: BASELINE_NOTES.md  FINDINGS.md  SITUATION_SUMMARY.md  TODO.md  WM_GRAFT_JOURNAL.md
scripts/: MOTOR_MIGRATION.md  analyze_control_lag.py  backtest_lookahead.py  backtest_velocity_estimators.py  benchmark_training_speed.py  extract_s2_latents.py  extract_s2_latents_hvla.py  hvla_migrate_checkpoints.py  motor_tools.py  probe_motor_send_rate.py  proto_decoupled_teleop.py  rlt_arch_experiment.sh  rlt_chunk_continuity.py  rlt_perf_audit.py  rlt_replay_audit.py  rlt_token_probe.py  rlt_visualize.py  sim_adaptive_lookahead.py  train_act_vlm.py
scripts/control_channel/: record_gui_demo.py  smoke_record.py
scripts/gui/: make_test_feature_editing_dataset.py  screenshot_data_tab_urdf.py  screenshot_gui.py
scripts/hvla_analysis/: README.md  analyze_grip_drops.py  analyze_s2_attention.py  eval_s2_subtask.py
scripts/lint/: no_setup_hardcode.py  no_silent_destruct.py
scripts/training/: DESIGN.md  README.md  deploy_local.sh  install_prereqs.sh  run_training.sh  setup_host.sh
src/lerobot/: types.py
states/: README.md
tests/: test_cli_peft.py  test_control_robot.py  test_debug_model_api.py  test_obs_stream.py  test_obs_stream_s2.py  test_trim_video_content.py
tests/common/: test_actions.py  test_control_channel.py
tests/configs/: test_parser_argparse_help.py  test_parser_literal_decoder.py
tests/datasets/: test_chained_merge.py  test_dataset_metadata.py  test_dataset_postprocess.py  test_dataset_tools.py  test_dataset_writer.py  test_datasets.py  test_destructive_safety.py  test_feature_bounds_and_categorical.py  test_merge_into.py  test_merge_regression.py  test_per_episode_feature_flag.py  test_set_feature_values.py  test_stats_recomputation.py  test_streaming_video_encoder.py  test_trim_regression.py  test_trim_video_content.py  test_video_decode_backend.py  test_video_encoder.py  test_virtual_edits.py
tests/fixtures/: dataset_factories.py  dataset_snapshot.py  predictive_controller_ep3_slice.npz
tests/gui/: __init__.py  conftest.py  overlay_gate.test.js  robot_nested_fields.test.js  test_add_host_dialog_playwright.py  test_api_nebius_connection.py  test_api_training.py  test_api_training_hosts.py  test_cache_invalidation.py  test_camera_preview_lifecycle.py  test_dataset_reload.py  test_dataset_sources.py  test_edits_safety.py  test_env_profiles.py  test_episode_indexing.py  test_feature_add_endpoints.py  test_feature_edits.py  test_feature_endpoints.py  test_feature_schema.py  test_frame_cache.py  test_gpu_slot.py  test_hub_endpoints.py  test_hub_jobs.py  test_hub_live.py  test_hub_worker.py  test_identify_arm_probe.py  test_metadata_reload.py  test_metadata_reload_integration.py  test_models_naming.py  test_next_success_migration.py  test_open_dataset_local_cache.py  test_overlay_adapter_detect.py  test_overlay_gate_js.py  test_overlay_lease.py  test_overlay_state.py  test_overlays.py  test_overlays_lifecycle_e2e.py  test_policy_attention.py  test_prefetch.py  test_process_endpoints.py  (+21 more)
tests/hvla/: test_checkpoint_format.py  test_flash_dagger_buffer.py  test_flash_dagger_chunks.py  test_flash_dagger_lora.py  test_flash_dagger_metrics.py  test_flash_dagger_mix.py  test_inference_thread.py  test_intervention.py  test_ipc.py  test_kv_cache.py  test_optimizations.py  test_recording.py  test_recording_safety.py  test_rlt.py  test_rlt_episode.py  test_rlt_metrics.py  test_rlt_parity.py
tests/mcp/: test_ai_setup.py  test_auth.py  test_bridge.py  test_dataset_edit.py  test_dataset_merge.py  test_hub_edit.py  test_hub_readonly.py  test_read_completers.py  test_robots_edit.py  test_robots_readonly.py  test_run_edit.py  test_run_readonly.py  test_store.py  test_training_tools.py  test_unified_serve.py
tests/model/: __init__.py  test_pink_ik_trajectory.py  test_pink_kinematics.py
tests/motors/: test_damiao.py  test_damiao_mit.py  test_damiao_safety.py  test_locked_bus.py  test_recover.py
tests/policies/: test_prepare_observation.py  test_registry_symmetry.py
tests/processor/: test_cartesian_ik_pipeline.py
tests/robots/: test_bi_openarm_follower_lifecycle.py  test_bi_openarm_follower_safety.py  test_bi_so107_follower.py  test_bi_so107_follower_predictive.py  test_cartesian_ik.py  test_openarm2_record_wiring.py  test_openarm_cartesian_ik.py  test_openarm_follower_control.py  test_openarm_follower_safety.py  test_openarm_follower_telemetry.py  test_openarm_gravity_ff.py  test_openarm_mink_ik.py  (+10 more)
(+710 files in other folders)
