# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://huggingface.co/lerobot"
documentation = "https://huggingface.co/docs/lerobot/index"
source = "https://github.com/huggingface/lerobot"
issues = "https://github.com/huggingface/lerobot/issues"
discord = "https://discord.gg/s3KuuzsPFb"

[project]
name = "lerobot"
version = "0.5.2"
description = "🤗 LeRobot: State-of-the-art Machine Learning for Real-World Robotics in Pytorch"
dynamic = ["readme"]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Rémi Cadène", email = "re.cadene@gmail.com" },
    { name = "Simon Alibert", email = "alibert.sim@gmail.com" },
    { name = "Alexander Soare", email = "alexander.soare159@gmail.com" },
    { name = "Quentin Gallouédec", email = "quentin.gallouedec@ec-lyon.fr" },
    { name = "Steven Palma", email = "imstevenpmwork@ieee.org" },
    { name = "Pepijn Kooijmans", email = "pepijnkooijmans@outlook.com"},
    { name = "Michel Aractingi", email = "michel.aractingi@gmail.com"},
    { name = "Adil Zouitine", email = "adilzouitinegm@gmail.com" },
    { name = "Dana Aubakirova", email = "danaaubakirova17@gmail.com"},
    { name = "Caroline Pascal", email = "caroline8.pascal@gmail.com"},
    { name = "Martino Russi", email = "nopyeps@gmail.com"},
    { name = "Thomas Wolf", email = "thomaswolfcontact@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["lerobot", "huggingface", "robotics",  "machine learning", "artificial intelligence"]

dependencies = [
    # Core ML
    "torch>=2.7,<2.11.0",
    "torchvision>=0.22.0,<0.26.0",
    "numpy>=2.0.0,<2.3.0", # NOTE: Explicitly listing numpy helps the resolver converge faster. Upper bound imposed by opencv-python-headless.
    "opencv-python-headless>=4.9.0,<4.14.0",
    "Pillow>=10.0.0,<13.0.0",
    "einops>=0.8.0,<0.9.0",

    # Config & Hub
    "draccus==0.10.0", # TODO: Relax version constraint
    "huggingface-hub>=1.0.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",

    # Environments
    # NOTE: gymnasium is used in lerobot.envs (lerobot-train, lerobot-eval), policies/factory,
    # and robots/unitree. Moving it to an optional extra would require import guards across many
    # tightly-coupled modules. Candidate for a future refactor to decouple envs from the core.
    "gymnasium>=1.1.1,<2.0.0",

    # Serialization & checkpointing
    "safetensors>=0.4.3,<1.0.0",

    # Lightweight utilities
    "packaging>=24.2,<26.0",
    "termcolor>=2.4.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",

    # Build tools (required by opencv-python-headless on some platforms)
    "cmake>=3.29.0.1,<4.2.0",
    "setuptools>=71.0.0,<81.0.0",
]

# Optional dependencies
[project.optional-dependencies]

# ── Feature-scoped extras ──────────────────────────────────
dataset = [
    "datasets>=4.0.0,<5.0.0",
    "pandas>=2.0.0,<3.0.0", # NOTE: Transitive dependency of datasets
    "pyarrow>=21.0.0,<30.0.0", # NOTE: Transitive dependency of datasets
    "lerobot[av-dep]",
    "torchcodec>=0.3.0,<0.11.0; sys_platform != 'win32' and (sys_platform != 'linux' or (platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l')) and (sys_platform != 'darwin' or platform_machine != 'x86_64')", # NOTE: Windows support starts at version 0.7 (needs torch==2.8), ffmpeg>=8 support starts at version 0.8.1 (needs torch==2.9), system-wide ffmpeg support starts at version 0.10 (needs torch==2.10).
    "jsonlines>=4.0.0,<5.0.0",
]
training = [
    "lerobot[dataset]",
    "accelerate>=1.10.0,<2.0.0",
    "wandb>=0.24.0,<0.25.0",
]
hardware = [
    "lerobot[pynput-dep]",
    "lerobot[pyserial-dep]",
    "lerobot[deepdiff-dep]",
]
viz = [
    "rerun-sdk>=0.24.0,<0.27.0",
]
# ── User-facing composite extras (map to CLI scripts) ─────
# lerobot-record, lerobot-replay, lerobot-calibrate, lerobot-teleoperate, etc.
core_scripts = ["lerobot[dataset]", "lerobot[hardware]", "lerobot[viz]"]
# lerobot-eval -- base evaluation framework. You also need the policy's extra (e.g., lerobot[pi])
# and the environment's extra (e.g., lerobot[pusht]) if evaluating in simulation.
evaluation = ["lerobot[av-dep]"]
# lerobot-dataset-viz, lerobot-imgtransform-viz
dataset_viz = ["lerobot[dataset]", "lerobot[viz]"]

# Common
av-dep = ["av>=15.0.0,<16.0.0"]
pygame-dep = ["pygame>=2.5.1,<2.7.0"]
placo-dep = ["placo>=0.9.6,<0.9.17"]
pink-dep = ["pin-pink>=4.2,<5", "qpsolvers[proxqp]>=4.12,<5"]
transformers-dep = ["transformers==5.3.0"] # TODO(Steven): https://github.com/huggingface/lerobot/pull/3249
grpcio-dep = ["grpcio==1.73.1", "protobuf>=6.31.1,<6.32.0"]
can-dep = ["python-can>=4.2.0,<5.0.0"]
peft-dep = ["peft>=0.18.0,<1.0.0"]
scipy-dep = ["scipy>=1.14.0,<2.0.0"]
diffusers-dep = ["diffusers>=0.27.2,<0.36.0"]
qwen-vl-utils-dep = ["qwen-vl-utils>=0.0.11,<0.1.0"]
matplotlib-dep = ["matplotlib>=3.10.3,<4.0.0", "contourpy>=1.3.0,<2.0.0"] # NOTE: Explicitly listing contourpy helps the resolver converge faster.
pyserial-dep = ["pyserial>=3.5,<4.0"]
deepdiff-dep = ["deepdiff>=7.0.1,<9.0.0"]
pynput-dep = ["pynput>=1.7.8,<1.9.0"]
pyzmq-dep = ["pyzmq>=26.2.1,<28.0.0"]

# Motors
feetech = ["feetech-servo-sdk>=1.0.0,<2.0.0", "lerobot[pyserial-dep]", "lerobot[deepdiff-dep]"]
dynamixel = ["dynamixel-sdk>=3.7.31,<3.9.0", "lerobot[pyserial-dep]", "lerobot[deepdiff-dep]"]
damiao = ["lerobot[can-dep]"]
robstride = ["lerobot[can-dep]"]

# Robots
openarms = ["lerobot[damiao]"]
gamepad = ["lerobot[pygame-dep]", "hidapi>=0.14.0,<0.15.0"]
hopejr = ["lerobot[feetech]", "lerobot[pygame-dep]"]
lekiwi = ["lerobot[feetech]", "lerobot[pyzmq-dep]"]
unitree_g1 = [
    # "unitree-sdk2==1.0.1",
    "lerobot[pyzmq-dep]",
    "lerobot[pyserial-dep]",
    "onnxruntime>=1.16.0,<2.0.0",
    "onnx>=1.16.0,<2.0.0",
    "meshcat>=0.3.0,<0.4.0",
    "lerobot[matplotlib-dep]",
    "lerobot[pygame-dep]",
]
reachy2 = ["reachy2_sdk>=1.0.15,<1.1.0"]
kinematics = ["lerobot[placo-dep]", "lerobot[pink-dep]"]
intelrealsense = [
    "pyrealsense2>=2.55.1.6486,<2.57.0 ; sys_platform != 'darwin'",
    "pyrealsense2-macosx>=2.54,<2.57.0 ; sys_platform == 'darwin'",
]
phone = ["hebi-py>=2.8.0,<2.12.0", "teleop>=0.1.0,<0.2.0", "fastapi<1.0", "lerobot[scipy-dep]"]
# Quest 3 WebXR teleop (fork-only). aiohttp serves the WebXR page over a
# daemon-thread HTTPS server; the Cartesian IK a robot installs for this
# teleop in attach_teleop needs pin-pink (see lerobot[pink-dep]).
quest-vr = ["aiohttp>=3.9,<4.0", "lerobot[pink-dep]"]

# Policies
diffusion = ["lerobot[diffusers-dep]"]
wallx = [
    "lerobot[transformers-dep]",
    "lerobot[peft-dep]",
    "lerobot[scipy-dep]",
    "torchdiffeq>=0.2.4,<0.3.0",
    "lerobot[qwen-vl-utils-dep]",
]
pi = ["lerobot[transformers-dep]", "lerobot[scipy-dep]"]
smolvla = ["lerobot[transformers-dep]", "num2words>=0.5.14,<0.6.0", "accelerate>=1.7.0,<2.0.0"]
multi_task_dit = ["lerobot[transformers-dep]", "lerobot[diffusers-dep]"]
groot = [
    "lerobot[transformers-dep]",
    "lerobot[peft-dep]",
    "lerobot[diffusers-dep]",
    "dm-tree>=0.1.8,<1.0.0",
    "timm>=1.0.0,<1.1.0",
    "decord>=0.6.0,<1.0.0; (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
    "ninja>=1.11.1,<2.0.0",
    "flash-attn>=2.5.9,<3.0.0 ; sys_platform != 'darwin'"
]
sarm = ["lerobot[transformers-dep]", "pydantic>=2.0.0,<3.0.0", "faker>=33.0.0,<35.0.0", "lerobot[matplotlib-dep]", "lerobot[qwen-vl-utils-dep]"]
xvla = ["lerobot[transformers-dep]"]
hilserl = ["lerobot[transformers-dep]", "gym-hil>=0.1.13,<0.2.0", "lerobot[grpcio-dep]", "lerobot[placo-dep]"]
# HVLA (fork-only). Imported under src/lerobot/policies/hvla/. Mirrors what
# transformers / matplotlib / sentencepiece / scikit-learn the modules
# under that subtree actually `import`. Add `lerobot[hvla]` to your
# install if you want to run HVLA training/inference.
hvla = [
    "lerobot[transformers-dep]",
    "lerobot[matplotlib-dep]",
    "sentencepiece>=0.2.0,<1.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
]

# Debug-vision (fork-only). Representation-layer models (Grounding DINO,
# DINOv2 feature viz, ...) run alongside teleop to overlay live model output
# on the GUI camera view. Imported lazily under
# src/lerobot/policies/debug_vision/. torch + opencv-python-headless + Pillow
# + numpy are already core deps; transformers is the only addition. Weights
# are public HF checkpoints fetched into the standard HF cache on first load.
debug-vision = [
    "lerobot[transformers-dep]",
]

# Features
async = ["lerobot[grpcio-dep]", "lerobot[matplotlib-dep]"]
peft = ["lerobot[transformers-dep]", "lerobot[peft-dep]"]
# GUI (fork-only). pydantic is already pulled in transitively by fastapi
# but is imported directly under src/lerobot/gui/api/, so declare it
# explicitly — keeps the install resilient if fastapi ever swaps backend.
gui = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "lerobot[mcp]",  # gui/server.py unconditionally mounts the MCP app
    # `websockets` is needed for uvicorn's WS upgrade path. Used by the
    # bridge channel (gui/api/bridge.py) — without it, /api/bridge/ws
    # returns 404 even though the route is registered.
    "websockets>=13.0,<17.0",
    "pydantic>=2.0.0,<3.0.0",
    # mDNS so the GUI is reachable as http://lerobot.local:<port>/ from any
    # device on the LAN without having to know the host's IP. Optional at
    # runtime — gui/mdns.py is import-guarded — but listing it here makes
    # `pip install lerobot[gui]` produce a working "open from phone" setup.
    "zeroconf>=0.130,<1.0",
]
# MCP (fork-only). Exposes datasets to AI agents via the Model Context
# Protocol. Server lives under src/lerobot/mcp/ and runs over stdio; install
# alongside [dataset] for full functionality (dataset reads + video decode).
mcp = [
    "lerobot[dataset]",
    "mcp>=1.2.0,<2.0.0",
]

# Development
dev = ["pre-commit>=3.7.0,<5.0.0", "debugpy>=1.8.1,<1.9.0", "lerobot[grpcio-dep]", "grpcio-tools==1.73.1", "mypy>=1.19.1", "ruff>=0.14.1,<0.15", "lerobot[notebook]"]
notebook = ["jupyter>=1.0.0,<2.0.0", "ipykernel>=6.0.0,<7.0.0"]
test = ["pytest>=8.1.0,<9.0.0", "pytest-timeout>=2.4.0,<3.0.0", "pytest-cov>=5.0.0,<8.0.0", "mock-serial>=0.0.1,<0.1.0 ; sys_platform != 'win32'"]
video_benchmark = ["scikit-image>=0.23.2,<0.26.0", "pandas>=2.2.2,<2.4.0"]

# Simulation
# NOTE: Explicitly listing scipy helps flatten the dependecy tree.
aloha = ["lerobot[dataset]", "gym-aloha>=0.1.2,<0.2.0", "lerobot[scipy-dep]"]
pusht = ["lerobot[dataset]", "gym-pusht>=0.1.5,<0.2.0", "pymunk>=6.6.0,<7.0.0"] # TODO: Fix pymunk version in gym-pusht instead
libero = ["lerobot[dataset]", "lerobot[transformers-dep]", "hf-libero>=0.1.3,<0.2.0; sys_platform == 'linux'", "lerobot[scipy-dep]"]
metaworld = ["lerobot[dataset]", "metaworld==3.0.0", "lerobot[scipy-dep]"]

# All
all = [
    # Feature-scoped extras
    "lerobot[dataset]",
    "lerobot[training]",
    "lerobot[hardware]",
    "lerobot[viz]",
    # NOTE(resolver hint): scipy is pulled in transitively via lerobot[scipy-dep] through
    # multiple extras (aloha, metaworld, pi, wallx, phone). Listing it explicitly
    # helps pip's resolver converge by constraining scipy early, before it encounters
    # the loose scipy requirements from transitive deps like dm-control and metaworld.
    "scipy>=1.14.0,<2.0.0",
    "lerobot[dynamixel]",
    "lerobot[feetech]",
    "lerobot[damiao]",
    "lerobot[robstride]",
    "lerobot[gamepad]",
    "lerobot[hopejr]",
    "lerobot[lekiwi]",
    "lerobot[openarms]",
    "lerobot[reachy2]",
    "lerobot[kinematics]",
    "lerobot[intelrealsense]",
    "lerobot[diffusion]",
    "lerobot[multi_task_dit]",
    "lerobot[wallx]",
    "lerobot[pi]",
    "lerobot[smolvla]",
    # "lerobot[groot]", TODO(Steven): Gr00t requires specific installation instructions for flash-attn
    "lerobot[xvla]",
    "lerobot[hilserl]",
    "lerobot[hvla]",
    "lerobot[gui]",
    "lerobot[mcp]",
    "lerobot[async]",
    "lerobot[dev]",
    "lerobot[test]",
    "lerobot[video_benchmark]",
    "lerobot[aloha]",
    "lerobot[pusht]",
    "lerobot[phone]",
    "lerobot[quest-vr]",
    "lerobot[libero]; sys_platform == 'linux'",
    "lerobot[metaworld]",
    "lerobot[sarm]",
    "lerobot[peft]",
    # "lerobot[unitree_g1]", TODO: Unitree requires specific installation instructions for unitree_sdk2
]

[project.scripts]
lerobot-calibrate="lerobot.scripts.lerobot_calibrate:main"
lerobot-find-cameras="lerobot.scripts.lerobot_find_cameras:main"
lerobot-find-port="lerobot.scripts.lerobot_find_port:main"
lerobot-record="lerobot.scripts.lerobot_record:main"
lerobot-replay="lerobot.scripts.lerobot_replay:main"
lerobot-setup-motors="lerobot.scripts.lerobot_setup_motors:main"
lerobot-teleoperate="lerobot.scripts.lerobot_teleoperate:main"
lerobot-eval="lerobot.scripts.lerobot_eval:main"
lerobot-train="lerobot.scripts.lerobot_train:main"
lerobot-train-tokenizer="lerobot.scripts.lerobot_train_tokenizer:main"
lerobot-dataset-viz="lerobot.scripts.lerobot_dataset_viz:main"
lerobot-info="lerobot.scripts.lerobot_info:main"
lerobot-find-joint-limits="lerobot.scripts.lerobot_find_joint_limits:main"
lerobot-imgtransform-viz="lerobot.scripts.lerobot_imgtransform_viz:main"
lerobot-edit-dataset="lerobot.scripts.lerobot_edit_dataset:main"
lerobot-setup-can="lerobot.scripts.lerobot_setup_can:main"
lerobot-mcp="lerobot.mcp.cli:main"

# ---------------- Tool Configurations ----------------
[tool.setuptools.package-data]
lerobot = ["envs/*.json"]
"lerobot.gui" = ["static/*.html", "static/*.css", "static/*.js"]
"lerobot.robots.so101_description" = ["urdf/*.urdf", "meshes/*.stl"]
"lerobot.robots.so107_description" = ["urdf/*.urdf", "meshes/*.stl"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 110
exclude = ["tests/artifacts/**/*.safetensors", "*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
# E, W: pycodestyle errors and warnings
# F: PyFlakes
# I: isort
# UP: pyupgrade
# B: flake8-bugbear (good practices, potential bugs)
# C4: flake8-comprehensions (more concise comprehensions)
# A: flake8-builtins (shadowing builtins)
# SIM: flake8-simplify
# RUF: Ruff-specific rules
# D: pydocstyle (for docstring style/formatting)
# S: flake8-bandit (some security checks, complements Bandit)
# T20: flake8-print (discourage print statements in production code)
# N: pep8-naming
# TODO: Uncomment rules when ready to use
select = [
    "E", "W", "F", "I", "B", "C4", "T20", "N", "UP", "SIM" #, "A", "S", "D", "RUF"
]
ignore = [
    "E501", # Line too long
    "T201", # Print statement found
    "T203", # Pprint statement found
    "B008", # Perform function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
# E402: conditional-import guards (TYPE_CHECKING / is_package_available) must precede the imports they protect
"src/lerobot/scripts/convert_dataset_v21_to_v30.py" = ["E402"]
"src/lerobot/policies/wall_x/**" = ["N801", "N812", "SIM102", "SIM108", "SIM210", "SIM211", "B006", "B007", "SIM118"] # Supprese these as they are coming from original Qwen2_5_vl code TODO(pepijn): refactor original
# HVLA / RLT / our research code uses ML-convention names: matrix vars X/Q/K/V/B/C, `import torch.nn.functional as F`, etc. Ruff's pep8-naming rules flag these as violations; consistent with how upstream handles wall_x, scope the same naming-rule allowlist to fork-only ML code. Also allow E702/E741 in research scripts which routinely chain plot setup statements (`ax.set_xlabel(...); ax.set_ylabel(...)`) and use `l` for list-comp temporaries. SIM102/SIM108 disabled because nested-if and if-else carry expository comments that ternary forms can't.
"src/lerobot/policies/hvla/**" = ["N801", "N802", "N803", "N806", "N812", "E702", "E741", "SIM102", "SIM108"]
"tests/hvla/**" = ["N802", "N803", "N806", "N812", "E402", "E741", "B017"]
# Kinematics code uses math-convention matrix names (SE(3) `T`, rotation `R`).
"src/lerobot/model/pink_kinematics.py" = ["N806"]
"tests/model/test_pink_kinematics.py" = ["N806", "N817"]
# Tests routinely use nested `with patch(...)` blocks (one mock per line is more readable than one combined `with (a, b, c, d):`), and try/except/pass for "raising is fine" assertions. Mute these rules in tests broadly.
"tests/**" = ["SIM117", "SIM105", "SIM113"]
# Top-level research / inference scripts also use `F = torch.nn.functional` aliasing.
"{chop,dual_system_infer,multistage_infer,openpi_infer}.py" = ["N812"]
"scripts/**.py" = ["N812"]
# Upstream-shared files where our merge state has not yet picked up upstream's
# modernization commits (PEP 695 `type X = ...` aliases, generic functions/
# classes, combined `if`s). Each rule below requires either an unsafe rewrite
# or a structural change. We deliberately don't apply them here: a future
# upstream sync will bring upstream's already-modernized version of the file
# in, and re-doing the modernization ourselves diverges from upstream's style
# and creates merge conflicts. Drop each entry once that file syncs from
# upstream.
"src/lerobot/cameras/realsense/camera_realsense.py" = ["SIM102"]
"src/lerobot/motors/motors_bus.py" = ["UP007"]
"src/lerobot/processor/pipeline.py" = ["UP046"]
"src/lerobot/utils/io_utils.py" = ["UP007", "UP047"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["lerobot"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "benchmarks",
    "src/lerobot/datasets/push_dataset_to_hub",
    # Top-level research / inference scripts. They legitimately use
    # subprocess shell=True for chained commands, hardcoded /tmp/ for
    # frame dumps, and other patterns that are fine in a developer tool
    # but flag a wall of bandit issues unrelated to library security.
    "chop.py",
    "dual_system_infer.py",
    "multistage_infer.py",
    "openpi_infer.py",
    # Per-step analysis scripts: noisy bandit findings (subprocess for
    # aplay, json/pickle from trusted local checkpoints) drown out the
    # signal. The library code under src/lerobot/policies/hvla/ outside
    # of `scripts/` IS still bandit-checked.
    "src/lerobot/policies/hvla/scripts",
]
# B607 (partial executable path: xdg-open, aplay) is intentional — these
# are standard Linux utilities meant to be found via PATH; hardcoding
# /usr/bin/* would actually break on some distros. B614 (torch.load
# without weights_only) is currently impractical to fix wholesale — many
# of our checkpoints predate the weights_only=True default and the
# loaders need updating; track in TODO. B110 (try/except/pass) is
# intentional in our best-effort cleanup paths.
skips = ["B101", "B311", "B404", "B603", "B607", "B614", "B110", "B615"]

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",                      # spellchecker:disable-line
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on", # spellchecker:<on|off>
]
default.extend-ignore-identifiers-re = [
    # Add individual words here to ignore them
    "2nd",
    "pn",
    "PN",  # uppercase: occurs in "PNGs" (file format) in async-video docs
    "ser",
    "ein",
    "thw",
    "inpt",
    "ROBOTIS",
    "OT_VALUE",
    # Variable names for stacked batch tensors in HVLA optimization tests
    # (`stacked_ba`, `features_ba`, "AB[0] should match BA[1]" comment).
    "ba",
    "BA",
    # Compound English words appearing in code comments + docs:
    # "mis-load" (test_rlt.py), "mis-time" (test_intervention.py).
    "mis",
    # Paper notation: `L_rto` is the RL Token reconstruction loss
    # (Eq. 2 of the RLT paper). Spelled to match the paper.
    "rto",
]

# TODO: Uncomment when ready to use
# [tool.interrogate]
# ignore-init-module = true
# ignore-init-method = true
# ignore-nested-functions = false
# ignore-magic = false
# ignore-semiprivate = false
# ignore-private = false
# ignore-property-decorators = false
# ignore-module = false
# ignore-setters = false
# fail-under = 80
# output-format = "term-missing"
# color = true
# paths = ["src/lerobot"]

# TODO: Enable mypy gradually module by module across multiple PRs
# Uncomment [tool.mypy] first, then uncomment individual module overrides as they get proper type annotations

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
# Top-level research / inference scripts (chop, multistage_infer,
# dual_system_infer, openpi_infer, scripts/train_act_vlm,
# scripts/benchmark_training_speed) reference internal helpers that have
# moved or use dynamic attributes on Callable. They're dev-only entry
# points, not library code; keep mypy focused on src/lerobot/. The
# strictly-typed modules (envs, configs, optim, model, cameras, motors,
# transport) below are unaffected.
exclude = [
    "^(chop|multistage_infer|dual_system_infer|openpi_infer)\\.py$",
    "^scripts/(train_act_vlm|benchmark_training_speed|extract_s2_latents)\\.py$",
]
# warn_return_any = true
# warn_unused_configs = true
# strict = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = "lerobot.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "lerobot.envs.*"
ignore_errors = false


# [[tool.mypy.overrides]]
# module = "lerobot.utils.*"
# ignore_errors = false

[[tool.mypy.overrides]]
module = "lerobot.configs.*"
ignore_errors = false

# extra strictness for configs
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "lerobot.optim.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "lerobot.model.*"
ignore_errors = false

# [[tool.mypy.overrides]]
# module = "lerobot.processor.*"
# ignore_errors = false

# [[tool.mypy.overrides]]
# module = "lerobot.datasets.*"
# ignore_errors = false

[[tool.mypy.overrides]]
module = "lerobot.cameras.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "lerobot.motors.*"
ignore_errors = false

# [[tool.mypy.overrides]]
# module = "lerobot.robots.*"
# ignore_errors = false

# [[tool.mypy.overrides]]
# module = "lerobot.teleoperators.*"
# ignore_errors = false

# [[tool.mypy.overrides]]
# module = "lerobot.policies.*"
# ignore_errors = false

# [[tool.mypy.overrides]]
# module = "lerobot.rl.*"
# ignore_errors = false


# [[tool.mypy.overrides]]
# module = "lerobot.async_inference.*"
# ignore_errors = false

[[tool.mypy.overrides]]
module = "lerobot.transport.*"
ignore_errors = false

# [[tool.mypy.overrides]]
# module = "lerobot.scripts.*"
# ignore_errors = false

[tool.pytest.ini_options]
# Exclude live-HF tests from default runs. They hit the real Hub, create
# real throwaway repos under whoever's logged in via `huggingface-cli
# login`, and take ~15s each. Opt in with `pytest -m hub_live` when you
# actually want to exercise the live path.
addopts = "-m 'not hub_live'"
markers = [
    "hub_live: Tests that hit the real HuggingFace Hub. Skipped by default; opt in with `pytest -m hub_live`. Require a logged-in HF token + network; tests auto-skip if not logged in. Repos go under the logged-in user's namespace as `_lerobot_hub_live_*` and are deleted on test exit.",
]
